# supplyflow-ai

./: DESIGN_SYSTEM.md  Dockerfile  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  MISSING_COMPONENTS_IMPLEMENTATION.md  README.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/copilot/: loading.tsx  page.tsx
src/app/dashboard/: loading.tsx  page-optimized.tsx  page.tsx
src/app/disruptions/: loading.tsx  page.tsx
src/app/forecasting/: loading.tsx  page.tsx
src/app/routing/: loading.tsx  page.tsx
src/app/support/: page.tsx
src/components/auth/: route-guard.tsx
src/components/copilot/: chat-interface.tsx  message-bubble.tsx  suggestions.tsx
src/components/dashboard/: alerts-panel.tsx  metrics.tsx  network-overview.tsx  quick-actions.tsx
src/components/disruptions/: alert-panel.tsx  disruption-map.tsx  disruption-timeline.tsx  risk-assessment.tsx
src/components/forecasting/: accuracy-metrics.tsx  demand-insights.tsx  forecast-chart.tsx  model-selector.tsx  scenario-planner.tsx
src/components/providers/: query-provider.tsx
src/components/shared/: nav-bar.tsx  (+1 more)
src/contexts/: auth-context.tsx
src/hooks/: use-toast.ts  useDisruptions.ts  useForecasting.ts  useRouting.ts
src/lib/: rate-limit.ts
supplyflow-backend/: Dockerfile  README.md  main.py  pyproject.toml  pyrightconfig.json  test_backend.py  test_imports.py
supplyflow-backend/routers/: disruptions.py  graph.py  ml.py
supplyflow-backend/services/: graph_service.py  ml_service.py
(+14 files in other folders)
